- fixed CSS scrollbar for roster using calc()

--- a/app/widgets/Roster/roster.css
+++ b/app/widgets/Roster/roster.css
@@ -3,14 +3,15 @@
     transition: right 0.5s ease;
     right: 0em;
     pointer-events: auto;
-    height: 100%;
+    /*height: 100%;*/
+    height: calc(100% - 6em);
 }
 
-#roster:after {
+/*#roster:after {
     content: "";
     display: block;
     height: 3em;
-}
+}*/
 
 #roster span.nocontacts {
     color: white;
@@ -56,7 +57,7 @@
     list-style-type: none;
     background-color: rgba(36, 36, 36, 1);
     margin-top: -0.5em;
-    padding-bottom: 6em;
+    /*padding-bottom: 6em;*/
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
